--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Fifty expressions of eleonora</h1>
-      <h2 class="project-tagline"></h2>
-      <a href="https://github.com/an-vo/fifty_expressions_of_Eleonora" class="btn">View on GitHub</a>
-      <a href="https://github.com/an-vo/fifty_expressions_of_Eleonora/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/an-vo/fifty_expressions_of_Eleonora/tarball/master" class="btn">Download .tar.gz</a>
+      <h2 class="project-tagline">I am sad. Or not? </h2>
+      <!--<a href="https://github.com/an-vo/fifty_expressions_of_Eleonora" class="btn">View on GitHub</a>-->
+      <!--<a href="https://github.com/an-vo/fifty_expressions_of_Eleonora/zipball/master" class="btn">Download .zip</a>-->
+      <!--<a href="https://github.com/an-vo/fifty_expressions_of_Eleonora/tarball/master" class="btn">Download .tar.gz</a>-->
     </section>
 
     <section class="main-content">
