--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
 <div class="expression">
   <img src="https://cloud.githubusercontent.com/assets/8850163/6992649/a4a04300-dad9-11e4-9259-d2909af966a8.jpg"/>
 </div>
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = 'httpanvogithubiofiftyexpressionsofeleonora';
+    
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/an-vo/fifty_expressions_of_Eleonora">Fifty expressions of eleonora</a> is maintained by <a href="https://github.com/an-vo">an-vo</a>.</span>
 
