--- a/index.html
+++ b/index.html
@@ -8,10 +8,27 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="inlineDisqussions.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="inlineDisqussions.js"></script>
   </head>
   <body>
+  
+  <script>
+  disqus_shortname = 'inlinecomments';
+  jQuery(document).ready(function() {
+     jQuery("div").inlineDisqussions({
+    identifier: 'expression',
+    displayCount: true,
+    highlighted: false,
+    position: 'bottom',
+    background: 'white',
+    maxWidth: 9999
+});
+  });
+</script>
+
+ 
     <section class="page-header">
       <h1 class="project-name">Fifty expressions of eleonora</h1>
       <h2 class="project-tagline">I am sad. Or not? </h2>
