--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     identifier: 'expression',
     displayCount: true,
     highlighted: false,
-    position: 'bottom',
+    position: 'right',
     background: 'white',
     maxWidth: 9999
 });
