--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script>
   disqus_shortname = 'httpanvogithubiofiftyexpressionsofeleonora';
   jQuery(document).ready(function() {
-     jQuery("p").inlineDisqussions({
+     jQuery("article").inlineDisqussions({
     identifier: 'disqussion',
     displayCount: true,
     highlighted: false,
@@ -40,25 +40,25 @@
     <section class="main-content">
       <h1>
 <a id="fifty_expressions_of_eleonora" class="anchor" href="#fifty_expressions_of_eleonora" aria-hidden="true"><span class="octicon octicon-link"></span></a>fifty_expressions_of_Eleonora</h1>
-<p >
+<article >
   <img src="https://cloud.githubusercontent.com/assets/8850163/6992629/6376b8fa-dad9-11e4-92c0-a08d64e9fd91.jpg"/>
-</p>
+</article>
 
-<p >
+<article >
   <img src="https://cloud.githubusercontent.com/assets/8850163/6992630/6989af54-dad9-11e4-88f4-d565788420f1.jpg"/>
-</p>
+</article>
 
-<p >
+<article >
   <img src="https://cloud.githubusercontent.com/assets/8850163/6992631/6c86e3a2-dad9-11e4-989f-7072cf7347bc.jpg"/>
-</p>
+</article>
 
-<p >
+<article >
   <img src="https://cloud.githubusercontent.com/assets/8850163/6992640/a4859dc0-dad9-11e4-92a5-716e5d6a3195.jpg"/>
-</p>
+</article>
 
-<p >
+<article >
   <img src="https://cloud.githubusercontent.com/assets/8850163/6992649/a4a04300-dad9-11e4-9259-d2909af966a8.jpg"/>
-</p>
+</article>
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
