--- a/index.html
+++ b/index.html
@@ -41,6 +41,26 @@
       <h1>
 <a id="fifty_expressions_of_eleonora" class="anchor" href="#fifty_expressions_of_eleonora" aria-hidden="true"><span class="octicon octicon-link"></span></a>fifty_expressions_of_Eleonora</h1>
 
+<article >
+  <img height="200px" src="https://cloud.githubusercontent.com/assets/8850163/6992629/6376b8fa-dad9-11e4-92c0-a08d64e9fd91.jpg"/>
+</article>
+
+<article >
+  <img height="200px" src="https://cloud.githubusercontent.com/assets/8850163/6992630/6989af54-dad9-11e4-88f4-d565788420f1.jpg"/>
+</article>
+
+<article >
+  <img height="200px" src="https://cloud.githubusercontent.com/assets/8850163/6992631/6c86e3a2-dad9-11e4-989f-7072cf7347bc.jpg"/>
+</article>
+
+<article >
+  <img height="200px" src="https://cloud.githubusercontent.com/assets/8850163/6992640/a4859dc0-dad9-11e4-92a5-716e5d6a3195.jpg"/>
+</article>
+
+<article >
+  <img height="200px" src="https://cloud.githubusercontent.com/assets/8850163/6992649/a4a04300-dad9-11e4-9259-d2909af966a8.jpg"/>
+</article>
+
 <article>
 The problem with most comments is context - in most cases, comment threads are positioned at the bottom of the post. In these situations, commenting on a specific point in the article becomes quite difficult, I guess this is why we have "quotes" - by repeating a certain part of the original post, you could refer to the specific point where it was mentioned and comment in that specific context. That was OK, for 2005, but what if you could simply comment anywhere?
 </article>
@@ -54,26 +74,6 @@ The problem with most comments is context - in most cases, comment threads are p
 The problem with most comments is context - in most cases, comment threads are positioned at the bottom of the post. In these situations, commenting on a specific point in the article becomes quite difficult, I guess this is why we have "quotes" - by repeating a certain part of the original post, you could refer to the specific point where it was mentioned and comment in that specific context. That was OK, for 2005, but what if you could simply comment anywhere?
 </article>
 
-
-<article >
-  <img src="https://cloud.githubusercontent.com/assets/8850163/6992629/6376b8fa-dad9-11e4-92c0-a08d64e9fd91.jpg"/>
-</article>
-
-<article >
-  <img src="https://cloud.githubusercontent.com/assets/8850163/6992630/6989af54-dad9-11e4-88f4-d565788420f1.jpg"/>
-</article>
-
-<article >
-  <img src="https://cloud.githubusercontent.com/assets/8850163/6992631/6c86e3a2-dad9-11e4-989f-7072cf7347bc.jpg"/>
-</article>
-
-<article >
-  <img src="https://cloud.githubusercontent.com/assets/8850163/6992640/a4859dc0-dad9-11e4-92a5-716e5d6a3195.jpg"/>
-</article>
-
-<article >
-  <img src="https://cloud.githubusercontent.com/assets/8850163/6992649/a4a04300-dad9-11e4-9259-d2909af966a8.jpg"/>
-</article>
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
