--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <article style="float:left">
   <img height="200px" src="https://cloud.githubusercontent.com/assets/8850163/6992649/a4a04300-dad9-11e4-9259-d2909af966a8.jpg"/>
 </article>
-
+<div style="clear:both"></div>
 <article>
 The problem with most comments is context - in most cases, comment threads are positioned at the bottom of the post. In these situations, commenting on a specific point in the article becomes quite difficult, I guess this is why we have "quotes" - by repeating a certain part of the original post, you could refer to the specific point where it was mentioned and comment in that specific context. That was OK, for 2005, but what if you could simply comment anywhere?
 </article>
