--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
 <a id="fifty_expressions_of_eleonora" class="anchor" href="#fifty_expressions_of_eleonora" aria-hidden="true"><span class="octicon octicon-link"></span></a>fifty_expressions_of_Eleonora</h1>
 
 <article style="float:left">
-  <img height="200px" src="https://cloud.githubusercontent.com/assets/8850163/6992629/6376b8fa-dad9-11e4-92c0-a08d64e9fd91.jpg"/>
+  <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992629/6376b8fa-dad9-11e4-92c0-a08d64e9fd91.jpg"/>
 </article>
 
 <article style="float:left">
-  <img height="200px" src="https://cloud.githubusercontent.com/assets/8850163/6992630/6989af54-dad9-11e4-88f4-d565788420f1.jpg"/>
+  <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992630/6989af54-dad9-11e4-88f4-d565788420f1.jpg"/>
 </article>
 
 <article style="float:left">
-  <img height="200px" src="https://cloud.githubusercontent.com/assets/8850163/6992631/6c86e3a2-dad9-11e4-989f-7072cf7347bc.jpg"/>
+  <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992631/6c86e3a2-dad9-11e4-989f-7072cf7347bc.jpg"/>
 </article>
 
 <article style="float:left">
-  <img height="200px" src="https://cloud.githubusercontent.com/assets/8850163/6992640/a4859dc0-dad9-11e4-92a5-716e5d6a3195.jpg"/>
+  <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992640/a4859dc0-dad9-11e4-92a5-716e5d6a3195.jpg"/>
 </article>
 
 <article style="float:left">
-  <img height="200px" src="https://cloud.githubusercontent.com/assets/8850163/6992649/a4a04300-dad9-11e4-9259-d2909af966a8.jpg"/>
+  <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992649/a4a04300-dad9-11e4-9259-d2909af966a8.jpg"/>
 </article>
 <div style="clear:both"></div>
 <article>
