--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Fifty expressions of eleonora by an-vo</title>
-    <meta name="viewport" content="height=device-height, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
@@ -38,11 +38,11 @@
 </section>
 
 <section class="main-content">
-        <img height="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992629/6376b8fa-dad9-11e4-92c0-a08d64e9fd91.jpg"/>
-        <img height="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992630/6989af54-dad9-11e4-88f4-d565788420f1.jpg"/>
-        <img height="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992631/6c86e3a2-dad9-11e4-989f-7072cf7347bc.jpg"/>
-        <img height="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992640/a4859dc0-dad9-11e4-92a5-716e5d6a3195.jpg"/>
-        <img height="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992649/a4a04300-dad9-11e4-9259-d2909af966a8.jpg"/>
+        <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992629/6376b8fa-dad9-11e4-92c0-a08d64e9fd91.jpg"/>
+        <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992630/6989af54-dad9-11e4-88f4-d565788420f1.jpg"/>
+        <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992631/6c86e3a2-dad9-11e4-989f-7072cf7347bc.jpg"/>
+        <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992640/a4859dc0-dad9-11e4-92a5-716e5d6a3195.jpg"/>
+        <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992649/a4a04300-dad9-11e4-9259-d2909af966a8.jpg"/>
 
     <div id="disqus_thread"></div>
     <script type="text/javascript">
