--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Fifty expressions of eleonora by an-vo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="height=device-height, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
@@ -17,7 +17,7 @@
 <script>
     disqus_shortname = 'httpanvogithubiofiftyexpressionsofeleonora';
     jQuery(document).ready(function() {
-        jQuery("img").inlineDisqussions({
+        jQuery("article").inlineDisqussions({
             identifier: 'disqussion',
             displayCount: true,
             highlighted: false,
@@ -38,11 +38,41 @@
 </section>
 
 <section class="main-content">
-        <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992629/6376b8fa-dad9-11e4-92c0-a08d64e9fd91.jpg"/>
-        <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992630/6989af54-dad9-11e4-88f4-d565788420f1.jpg"/>
-        <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992631/6c86e3a2-dad9-11e4-989f-7072cf7347bc.jpg"/>
-        <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992640/a4859dc0-dad9-11e4-92a5-716e5d6a3195.jpg"/>
-        <img width="400px" src="https://cloud.githubusercontent.com/assets/8850163/6992649/a4a04300-dad9-11e4-9259-d2909af966a8.jpg"/>
+    <h1>
+        <a id="fifty_expressions_of_eleonora" class="anchor" href="#fifty_expressions_of_eleonora" aria-hidden="true"><span class="octicon octicon-link"></span></a>fifty_expressions_of_Eleonora</h1>
+
+    <article >
+        <img height="500px" src="https://cloud.githubusercontent.com/assets/8850163/6992629/6376b8fa-dad9-11e4-92c0-a08d64e9fd91.jpg"/>
+    </article>
+
+    <article >
+        <img height="500px" src="https://cloud.githubusercontent.com/assets/8850163/6992630/6989af54-dad9-11e4-88f4-d565788420f1.jpg"/>
+    </article>
+
+    <article >
+        <img height="500px" src="https://cloud.githubusercontent.com/assets/8850163/6992631/6c86e3a2-dad9-11e4-989f-7072cf7347bc.jpg"/>
+    </article>
+
+    <article >
+        <img height="500px" src="https://cloud.githubusercontent.com/assets/8850163/6992640/a4859dc0-dad9-11e4-92a5-716e5d6a3195.jpg"/>
+    </article>
+
+    <article >
+        <img height="500px" src="https://cloud.githubusercontent.com/assets/8850163/6992649/a4a04300-dad9-11e4-9259-d2909af966a8.jpg"/>
+    </article>
+    <div style="clear:both"></div>
+    <article>
+        The problem with most comments is context - in most cases, comment threads are positioned at the bottom of the post. In these situations, commenting on a specific point in the article becomes quite difficult, I guess this is why we have "quotes" - by repeating a certain part of the original post, you could refer to the specific point where it was mentioned and comment in that specific context. That was OK, for 2005, but what if you could simply comment anywhere?
+    </article>
+
+    <article>
+        The problem with most comments is context - in most cases, comment threads are positioned at the bottom of the post. In these situations, commenting on a specific point in the article becomes quite difficult, I guess this is why we have "quotes" - by repeating a certain part of the original post, you could refer to the specific point where it was mentioned and comment in that specific context. That was OK, for 2005, but what if you could simply comment anywhere?
+        The problem with most comments is context - in most cases, comment threads are positioned at the bottom of the post. In these situations, commenting on a specific point in the article becomes quite difficult, I guess this is why we have "quotes" - by repeating a certain part of the original post, you could refer to the specific point where it was mentioned and comment in that specific context. That was OK, for 2005, but what if you could simply comment anywhere?
+    </article>
+
+    <article>
+        The problem with most comments is context - in most cases, comment threads are positioned at the bottom of the post. In these situations, commenting on a specific point in the article becomes quite difficult, I guess this is why we have "quotes" - by repeating a certain part of the original post, you could refer to the specific point where it was mentioned and comment in that specific context. That was OK, for 2005, but what if you could simply comment anywhere?
+    </article>
 
     <div id="disqus_thread"></div>
     <script type="text/javascript">
@@ -57,7 +87,6 @@
         })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-    
     <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/an-vo/fifty_expressions_of_Eleonora">Fifty expressions of eleonora</a> is maintained by <a href="https://github.com/an-vo">an-vo</a>.</span>
 
